# achdev-tool

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: run-tauri.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  deps.rs  lib.rs  main.rs
