[package]
name = "unity-build-tool"
version = "0.1.0"
description = "Unity build execution tool"
authors = ["you"]
edition = "2021"

[lib]
name = "unity_build_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
glob = "0.3"
